/*
Copyright 2017 The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package k8s.io.kubernetes.pkg.apis.admission.v1alpha1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";
import "k8s.io/apimachinery/pkg/util/intstr/generated.proto";
import "k8s.io/apiserver/pkg/apis/example/v1/generated.proto";
import "k8s.io/kube-aggregator/pkg/apis/apiregistration/v1alpha1/generated.proto";
import "k8s.io/kubernetes/pkg/apis/authentication/v1/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

// AdmittanceReview describes an admission request.
message AdmittanceReview {
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Spec describes the attributes for the admission request.
  // +optional
  optional AdmittanceReviewSpec spec = 2;

  // Status is filled in by the webhook and indicates whether the admission request should be permitted.
  // +optional
  optional AdmittanceReviewStatus status = 3;
}

// AdmittanceReviewSpec describes the admission.Attributes for the admission request.
message AdmittanceReviewSpec {
  // Kind is the type of object being manipulated.  For example: Pod
  optional k8s.io.apimachinery.pkg.apis.meta.v1.GroupVersionKind kind = 1;

  // Object is the object from the incoming request prior to default values being applied
  optional k8s.io.apimachinery.pkg.runtime.RawExtension object = 2;

  // OldObject is the existing object. Only populated for UPDATE requests.
  // +optional
  optional k8s.io.apimachinery.pkg.runtime.RawExtension oldObject = 3;

  // Operation is the operation being performed
  optional string operation = 4;

  // Name is the name of the object as presented in the request.  On a CREATE operation, the client may omit name and
  // rely on the server to generate the name.  If that is the case, this method will return the empty string.
  // +optional
  optional string name = 5;

  // Namespace is the namespace associated with the request (if any).
  // +optional
  optional string namespace = 6;

  // Resource is the name of the resource being requested.  This is not the kind.  For example: pods
  optional k8s.io.apimachinery.pkg.apis.meta.v1.GroupVersionResource resource = 7;

  // SubResource is the name of the subresource being requested.  This is a different resource, scoped to the parent
  // resource, but it may have a different kind. For instance, /pods has the resource "pods" and the kind "Pod", while
  // /pods/foo/status has the resource "pods", the sub resource "status", and the kind "Pod" (because status operates on
  // pods). The binding resource for a pod though may be /pods/foo/binding, which has resource "pods", subresource
  // "binding", and kind "Binding".
  // +optional
  optional string subResource = 8;

  // UserInfo is information about the requesting user
  optional k8s.io.kubernetes.pkg.apis.authentication.v1.UserInfo userInfo = 9;
}

// AdmittanceReviewStatus describes the status of the admission request.
message AdmittanceReviewStatus {
  // Allowed indicates whether or not the admission request was permitted.
  optional bool allowed = 1;

  // Reason should be empty unless Allowed is false in which case it may contain a short description of what is wrong.
  // Kubernetes may truncate excessively long errors when displaying to the user.
  // +optional
  optional string reason = 2;
}

